--- a/anaganilho.html
+++ b/anaganilho.html
@@ -72,11 +72,11 @@
                         </a>
                     </div>
                     <div class="profl_tfence1">
-                        <div class="profl_tbox2b">
-                        <div class="profl_timg2" style="background-image: url(css/img/patrn1.jpg)"></div>
-                            <div class="profl_ttitl">nome do projecto</div>
-                            <div class="profl_ttxt">legenda</div>
-                        </div>
+                        <a class="profl_tbox2b" href="ithraftrineuro_proj.html" target="_self">
+                        <div class="profl_timg2" style="background-image: url(css/img/r2/r2_anaganilho.jpg)"></div>
+                            <div class="profl_ttitl">Is there any future in the word 'europe'?</div>
+                            <div class="profl_ttxt">Registo Audiovisual</div>
+                        </a>
                         <div class="profl_tbox1b">
                         <div class="profl_timg1" style="background-image: url(css/img/patrn2.jpg)"></div>
                             <div class="profl_ttitl">nome do projecto</div>
