--- a/carlcouto.html
+++ b/carlcouto.html
@@ -118,10 +118,15 @@
                         </a>
                     </div>
                 <div class="profl_tfence1">
-                        <a class="profl_tbox1c" href="trsmlhrsqsdespm_proj.html" target="_self">
+                        <a class="profl_tbox1d" href="trsmlhrsqsdespm_proj.html" target="_self">
                         <div class="profl_timg1" style="background-image: url(css/img/r1/carolina_couto/capa.jpg)"></div>
                             <div class="profl_ttitl">três mulheres que se despem para ser Europa</div>
                             <div class="profl_ttxt">Série Fotográfica</div>
+                        </a>
+                    <a class="profl_tbox2a" href="oqsalvesqucim_proj.html" target="_self">
+                        <div class="profl_timg2" style="background-image: url(css/img/r2/r2_carolinacouto.jpg)"></div>
+                            <div class="profl_ttitl">O que salva a nossa casa do esquecimento?</div>
+                            <div class="profl_ttxt">Registo Audiovisual</div>
                         </a>
                     </div>
                 </div>
