--- a/catbarbosa.html
+++ b/catbarbosa.html
@@ -95,6 +95,13 @@
                             <div class="profl_ttxt">Série Fotográfica</div>
                         </a>
                     </div>
+                <div class="profl_tfence1">
+                    <a class="profl_tbox1d" href="eurodystllext_proj.html" target="_self">
+                        <div class="profl_timg1" style="background-image: url(css/img/r2/r2_catarinabarbosa.jpg)"></div>
+                            <div class="profl_ttitl">Europe, do you still exist?</div>
+                            <div class="profl_ttxt">Registo Audiovisual</div>
+                        </a>
+                </div>
                 </div>
         </div>
         <div id="foot">
