--- a/catcorreia.html
+++ b/catcorreia.html
@@ -77,11 +77,11 @@
                             <div class="profl_ttitl">“um pombo pousou num ramo a reflectir sobre a existência”</div>
                             <div class="profl_ttxt">Série Fotográfica</div>
                         </a>
-                        <div class="profl_tbox1b">
-                        <div class="profl_timg1" style="background-image: url(css/img/patrn2.jpg)"></div>
-                            <div class="profl_ttitl">nome do projecto</div>
-                            <div class="profl_ttxt">legenda</div>
-                        </div>
+                        <a class="profl_tbox1b" href="cnaeuidexst_proj.html" target="_self">
+                        <div class="profl_timg1" style="background-image: url(css/img/r2/r2_catarinacorreia.jpg)"></div>
+                            <div class="profl_ttitl">Can an European identity exist without a common language?</div>
+                            <div class="profl_ttxt">Registo Audiovisual</div>
+                        </a>
                     </div>
                     <div class="profl_tfence1">
                         <div class="profl_tbox2c">
