--- a/catserafim.html
+++ b/catserafim.html
@@ -106,22 +106,29 @@
                         </a>
                     </div>
                 <div class="profl_tfence1">
-                        <a class="profl_tbox1a" href="bibliphi_proj.html" target="_self">
+                        <a class="profl_tbox1d" href="bibliphi_proj.html" target="_self">
                         <div class="profl_timg1" style="background-image: url(css/img/dlivroalivro/ulivropadl/catarina_serafim/capa.jpg)"></div>
                             <div class="profl_ttitl">Bibliophilia</div>
                             <div class="profl_ttxt">Livro de Autor</div>
                         </a>
-                    <a class="profl_tbox1b" href="eurovision_proj.html" target="_self">
+                    <a class="profl_tbox1a" href="eurovision_proj.html" target="_self">
                         <div class="profl_timg1" style="background-image: url(css/img/o1/catarina_serafim/capa.jpg)"></div>
                             <div class="profl_ttitl">Eurovisão: Uma Europa em Mudança</div>
                             <div class="profl_ttxt">Discurso / Storyboard e Guião</div>
                         </a>
+                    </div>
+                <div class="profl_tfence1">
                     <a class="profl_tbox2b" href="dminhald_proj.html" target="_self">
                         <div class="profl_timg2" style="background-image: url(css/img/r1/cat_serafim/capa.jpg)"></div>
                             <div class="profl_ttitl">Da Minha Aldeia</div>
                             <div class="profl_ttxt">Série Fotográfica</div>
                         </a>
-                    </div>
+                    <a class="profl_tbox1a" href="ahistvoltsarep_proj.html" target="_self">
+                        <div class="profl_timg1" style="background-image: url(css/img/r2/r2_catarinaserafim.jpg)"></div>
+                            <div class="profl_ttitl">A história voltar-se-à a repetir?</div>
+                            <div class="profl_ttxt">Registo Audiovisual</div>
+                        </a>
+                </div>
                 </div>
         </div>
         <div id="foot">
