--- a/davsantos.html
+++ b/davsantos.html
@@ -96,11 +96,16 @@
                         </a>
                     </div>
                 <div class="profl_tfence1">
-                        <a class="profl_tbox1a" href="olhrindivid_proj.html" target="_self">
+                       <a class="profl_tbox1d" href="olhrindivid_proj.html" target="_self">
                         <div class="profl_timg1" style="background-image: url(css/img/r1/david_santos/capa.jpg)"></div>
                             <div class="profl_ttitl">Olhar Individual</div>
                             <div class="profl_ttxt">Série Fotográfica</div>
                         </a>
+                    <a class="profl_tbox1e" href="pdrofdjorn_proj.html" target="_self">
+                        <div class="profl_timg2" style="background-image: url(css/img/r2/r2_davidsantos.jpg)"></div>
+                            <div class="profl_ttitl">Poderá o fim dos jornais, ser o fim de uma Cultura Europeia?</div>
+                            <div class="profl_ttxt">Registo Audiovisual</div>
+                        </a> 
                     </div>
                 </div>
         </div>
