--- a/dminhald_proj.html
+++ b/dminhald_proj.html
@@ -96,7 +96,7 @@
                     <a class="sproj_plinks" href="catserafim.html" target="_self">Catarina Serafim</a>
                 </div>
                 <div class="sproj_intro">
-                    <div class="sproj_txt"><p>«Da minha aldeia vejo quanto da terra se pode ver no Universo...<br>Por isso a minha aldeia é tão grande como outra terra qualquer » - *Alberto Caeiro, in “O Guardador de Rebanhos - Poema VII” Heterónimo de Fernando Pessoa</p><p>A Europa é feita de capitais e cidades, mas também dos campos, das aldeias e das quintas. Os Europeus são os jovens, mas também os idosos que nunca saíram do seu continente, país e aldeia. São as pequenas casas e as suas hortas. Os trilhos de terra batida. O café, a taberna, a padaria, a igreja. São as senhoras vestidas de preto de lenço na cabeça, os senhores de boina e colete que acordam de matina.</p></div>
+                    <div class="sproj_txt"><p>«Da minha aldeia vejo quanto da terra se pode ver no Universo...<br>Por isso a minha aldeia é tão grande como outra terra qualquer »<br>- *Alberto Caeiro, in “O Guardador de Rebanhos - Poema VII” Heterónimo de Fernando Pessoa</p><p>A Europa é feita de capitais e cidades, mas também dos campos, das aldeias e das quintas. Os Europeus são os jovens, mas também os idosos que nunca saíram do seu continente, país e aldeia. São as pequenas casas e as suas hortas. Os trilhos de terra batida. O café, a taberna, a padaria, a igreja. São as senhoras vestidas de preto de lenço na cabeça, os senhores de boina e colete que acordam de matina.</p></div>
                 </div>
             </div>
             <div class="slideshow-container">
