--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 <div class="hmain_blkt1">
                     <div class="hmain_blk1">
                         <div class="hmain_btxt1">
-                            <p>Somos alunos finalistas de Design de Comunicação da Faculdade de Belas-Artes da Universidade de Lisboa e admitimos que ao longo destes três anos de curso e daqui em diante, caminhamos sem destino a ______. Deste modo, não sabemos bem como preencher este espaço. Por agora, vamos deixar em branco mas, eventualmente, não nos faltarão palavras.</p>
+                            <p>Somos alunos finalistas de Design de Comunicação da Faculdade de Belas-Artes da Universidade de Lisboa e admitimos que ao longo destes três anos de curso e daqui em diante, caminhamos sem destino. Deste modo, não sabemos bem como preencher este espaço. Por agora, vamos deixar em branco mas, eventualmente, não nos faltarão palavras.</p>
                         </div>
                         <a class="hmoreico" href="sobre.html" target="_self">+</a>
                     </div>
@@ -192,10 +192,12 @@
                 </div>
             </div>
             <div class="hmain_secr">
-                <div class="hmain_titl">segue-nos nas redes sociais!<p style="font-size: 40%; margin-top: 10px;">utiliza o hashtag #semdestinoa para nos identificares’ @semdestinoa</p></div>
+                <div class="hmain_titl">segue-nos nas redes sociais!<p style="font-size: 40%; margin-top: 10px;">utiliza o hashtag #semdestinoa para nos identificares @semdestinoa</p></div>
                 <div class="hmain_blkt4">
                     <div class="hsocialbox">
-                        <iframe src="https://snapwidget.com/embed/437032" class="snapwidget-widget" allowTransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden; width:100%; height:100%"></iframe>
+                        <!-- SnapWidget -->
+                        <iframe src="https://snapwidget.com/embed/454597" class="snapwidget-widget" allowTransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden; width:390px; height:390px"></iframe>
+
                     </div>
                     <div class="hsocialbox">
                     <!-- FaceWidget -->
