--- a/insidout_proj.html
+++ b/insidout_proj.html
@@ -70,7 +70,7 @@
                     <a class="sproj_plinks" href="sarrodrigues.html" target="_self">Sara Rodrigues</a>
                 </div>
                 <div class="sproj_intro">
-                    <div class="sproj_txt"><p>We like to think that the inside of a book is what we care about, but most of us do judge a book by its cover. (John Mullan, The Guardian, 2003)</p><p>The cover, being the first thing the reader sees, has to capture its eye while conveying the style of the book. To emphasize the importance of the cover it was created an “inside out” book, where this physical and hypothetical process turns the book into an illegible metaphor. It was also created a secondary object, “Grids to Go”, that results in a collection of existing grids that encourage the user to manipulate them and focus on different elements that make up the cover.</p></div>
+                    <div class="sproj_txt"><p><i>"We like to think that the inside of a book is what we care about, but most of us do judge a book by its cover."</i><br>(John Mullan, The Guardian, 2003)</p><p>The cover, being the first thing the reader sees, has to capture its eye while conveying the style of the book. To emphasize the importance of the cover it was created an “inside out” book, where this physical and hypothetical process turns the book into an illegible metaphor. It was also created a secondary object, “Grids to Go”, that results in a collection of existing grids that encourage the user to manipulate them and focus on different elements that make up the cover.</p></div>
                 </div>
             </div>
             <div class="slideshow-container">
