--- a/joalourenco.html
+++ b/joalourenco.html
@@ -101,6 +101,11 @@
                             <div class="profl_ttitl">Pausa</div>
                             <div class="profl_ttxt">Série Fotográfica</div>
                         </a>
+                    <a class="profl_tbox1b" href="whrtdiver_proj.html" target="_self">
+                        <div class="profl_timg1" style="background-image: url(css/img/r2/r2_joanalourenco.jpg)"></div>
+                            <div class="profl_ttitl">Where is the Diversity?</div>
+                            <div class="profl_ttxt">Registo Audiovisual</div>
+                        </a>
                     </div>
                 </div>
         </div>
