--- a/leocarvalho.html
+++ b/leocarvalho.html
@@ -117,6 +117,13 @@
                             <div class="profl_ttxt">Discurso / Storyboard e Guião</div>
                         </a>
                     </div>
+                <div class="profl_tfence1">
+                    <a class="profl_tbox2a" href="qeucbemim_proj.html" target="_self">
+                        <div class="profl_timg2" style="background-image: url(css/img/r2/r2_leonorcarvalho.jpg)"></div>
+                            <div class="profl_ttitl">Que Europa cabe em mim?</div>
+                            <div class="profl_ttxt">Registo Audiovisual</div>
+                        </a>
+                </div>
                 </div>
         </div>
         <div id="foot">
