--- a/pdrcartaxana.html
+++ b/pdrcartaxana.html
@@ -61,7 +61,7 @@
             <div class="profl_tplaygrnd1">
                     <div class="profl_tfence1">
                         <a class="profl_tbox1a" href="triptic_proj.html" target="_self">
-                        <div class="profl_timg1" style="background-image: url(css/img/psqv/1.comeinsideroom101/13.intala%C3%A7aoaudiovisual.mafaldapedrobeatriztiago.jpg)"></div>
+                        <div class="profl_timg1" style="background-image: url(css/img/psqv/1.comeinsideroom101/13.intalacaoaudiovisualmafaldapedrobeatriztiago.jpg)"></div>
                             <div class="profl_ttitl">Tríptico</div>
                             <div class="profl_ttxt">Instalação Audiovisual</div>
                         </a>
