--- a/proj.html
+++ b/proj.html
@@ -209,9 +209,7 @@
                             <div class="proj_ttitl">Slur</div>
                             <div class="proj_ttxt">Publicação Periódica</div>
                         </a>
-                    </div>
-                    <div class="proj_tfence1">
-                        <a class="proj_tbox2c" href="unarchive_proj.html" target="_self">
+                        <a class="proj_tbox2a" href="unarchive_proj.html" target="_self">
                         <div class="proj_timg2" style="background-image: url(css/img/totido/wl/5.unarchive/capa.jpg);"></div>
                             <div class="proj_ttitl">Un Archive</div>
                             <div class="proj_ttxt">Publicação Periódica</div>
@@ -481,7 +479,7 @@
                             <div class="proj_ttxt">Instalação Audiovisual</div>
                         </a>
                         <a class="proj_tbox2a" href="triptic_proj.html" target="_self">
-                        <div class="proj_timg2" style="background-image: url(css/img/psqv/1.comeinsideroom101/13.intala%C3%A7aoaudiovisual.mafaldapedrobeatriztiago.jpg)"></div>
+                        <div class="proj_timg2" style="background-image: url(css/img/psqv/1.comeinsideroom101/13.intalacaoaudiovisualmafaldapedrobeatriztiago.jpg)"></div>
                             <div class="proj_ttitl">Tríptico</div>
                             <div class="proj_ttxt">Instalação Audiovisual</div>
                         </a>
@@ -1046,129 +1044,113 @@
                 </div>
                 <div class="proj_tplaygrnd2">
                     <div class="proj_tfence2">
-                        <a class="proj_tbox1a" href="humnsmeuro_proj.html" target="_self">
-                            <div class="proj_timg1" style="background-image: url(css/img/r1/kevin_ferreira/capa.jpg)"></div>
-                            <div class="proj_ttitl">“humanismo europeu”</div>
-                            <div class="proj_ttxt">Série Fotográfica</div>
+                        <a class="proj_tbox1a" href="estmscond_proj.html" target="_self">
+                            <div class="proj_timg1" style="background-image: url(css/img/r2/r2_madalenaalmeida.jpg)"></div>
+                            <div class="proj_ttitl">Estamos condenados a repetirmo-nos?</div>
+                            <div class="proj_ttxt">Registo Audiovisual</div>
                         </a>
-                        <a class="proj_tbox2e" href="ocmnhdeuro_proj.html" target="_self">
-                            <div class="proj_timg2" style="background-image: url(css/img/r1/catarina_soares_barbosa/capa.jpg)"></div>
-                            <div class="proj_ttitl">O caminho da Europa: escolher aquilo em que acreditamos</div>
-                            <div class="proj_ttxt">Série Fotográfica</div>
+                        <a class="proj_tbox2e" href="whrtdiver_proj.html" target="_self">
+                            <div class="proj_timg2" style="background-image: url(css/img/r2/r2_joanalourenco.jpg)"></div>
+                            <div class="proj_ttitl">Where is the diversity?</div>
+                            <div class="proj_ttxt">Registo Audiovisual</div>
                         </a>
-                        <a class="proj_tbox1c" href="umpombpous_proj.html" target="_self">
-                            <div class="proj_timg1" style="background-image: url(css/img/r1/catarina_correia/capa.jpg)"></div>
-                            <div class="proj_ttitl">“um pombo pousou num ramo a reflectir sobre a existência”</div>
-                            <div class="proj_ttxt">Série Fotográfica</div>
+                        <a class="proj_tbox1c" href="wealldance_proj.html" target="_self">
+                            <div class="proj_timg1" style="background-image: url(css/img/r2/r2_anamanana.jpg)"></div>
+                            <div class="proj_ttitl">We all like to dance, right?</div>
+                            <div class="proj_ttxt">Registo Audiovisual</div>
                         </a>
-                        <a class="proj_tbox1d" href="olhrindivid_proj.html" target="_self">
-                            <div class="proj_timg1" style="background-image: url(css/img/r1/david_santos/capa.jpg)"></div>
-                            <div class="proj_ttitl">Olhar Individual</div>
-                            <div class="proj_ttxt">Série Fotográfica</div>
+                        <a class="proj_tbox1d" href="qulsomlisb_proj.html" target="_self">
+                            <div class="proj_timg1" style="background-image: url(css/img/r2/r2_rodrigosilva.jpg)"></div>
+                            <div class="proj_ttitl">Qual é o som de Lisboa?</div>
+                            <div class="proj_ttxt">Registo Audiovisual</div>
                         </a>
-                        <a class="proj_tbox1a" href="pausa_proj.html" target="_self">
-                            <div class="proj_timg1" style="background-image: url(css/img/r1/joana_lourenco/capa.jpg)"></div>
-                            <div class="proj_ttitl">Pausa</div>
-                            <div class="proj_ttxt">Série Fotográfica</div>
+                        <a class="proj_tbox1a" href="oqsalvesqucim_proj.html" target="_self">
+                            <div class="proj_timg1" style="background-image: url(css/img/r2/r2_carolinacouto.jpg)"></div>
+                            <div class="proj_ttitl">O que salva a nossa casa do esquecimento?</div>
+                            <div class="proj_ttxt">Registo Audiovisual</div>
                         </a>
-                        <a class="proj_tbox1a" href="europeu_proj.html" target="_self">
-                            <div class="proj_timg1" style="background-image: url(css/img/r1/tiago_marinho/capa.jpg)"></div>
-                            <div class="proj_ttitl">Europeu</div>
-                            <div class="proj_ttxt">Série Fotográfica</div>
+                        <a class="proj_tbox1a" href="qeucbemim_proj.html" target="_self">
+                            <div class="proj_timg1" style="background-image: url(css/img/r2/r2_leonorcarvalho.jpg)"></div>
+                            <div class="proj_ttitl">Que Europa cabe em mim?</div>
+                            <div class="proj_ttxt">Registo Audiovisual</div>
                         </a>
-                        <a class="proj_tbox1c" href="poeticvermlh_proj.html" target="_self">
-                            <div class="proj_timg1" style="background-image: url(css/img/r1/rodrigo_silva/capa.jpg)"></div>
-                            <div class="proj_ttitl">Poética Vermelha</div>
-                            <div class="proj_ttxt">Série Fotográfica</div>
+                        <a class="proj_tbox1c" href="pdrofdjorn_proj.html" target="_self">
+                            <div class="proj_timg1" style="background-image: url(css/img/r2/r2_davidsantos.jpg)"></div>
+                            <div class="proj_ttitl">Poderá o fim dos jornais, ser o fim de uma Cultura Europeia?</div>
+                            <div class="proj_ttxt">Registo Audiovisual</div>
                         </a>
-                        <a class="proj_tbox1d" href="pegdeuro_proj.html" target="_self">
-                            <div class="proj_timg1" style="background-image: url(css/img/r1/ines_borges/capa.jpg)"></div>
-                            <div class="proj_ttitl">Pegada Europeia</div>
-                            <div class="proj_ttxt">Série Fotográfica</div>
+                        <a class="proj_tbox1d" href="ddeurocolruin_proj.html" target="_self">
+                            <div class="proj_timg1" style="background-image: url(css/img/r2/r2_antoniosantiago.jpg)"></div>
+                            <div class="proj_ttitl">Did european colonialism ruin our world?</div>
+                            <div class="proj_ttxt">Registo Audiovisual</div>
                         </a>
-                        <a class="proj_tbox1a" href="aventcainterm_proj.html" target="_self">
-                            <div class="proj_timg1" style="background-image: url(css/img/r1/ana_catarina_santos/capa.jpg)"></div>
-                            <div class="proj_ttitl">Aventuras como as intermináveis viagens</div>
-                            <div class="proj_ttxt">Série Fotográfica</div>
+                        <a class="proj_tbox1a" href="smdemoqrest_proj.html" target="_self">
+                            <div class="proj_timg1" style="background-image: url(css/img/r2/r2_beatrizsapata.jpg)"></div>
+                            <div class="proj_ttitl">Sem Democracia, o que resta da Europa como a conhecemos?</div>
+                            <div class="proj_ttxt">Registo Audiovisual</div>
                         </a>
-                        <a class="proj_tbox1b" href="passagr_proj.html" target="_self">
-                            <div class="proj_timg1" style="background-image: url(css/img/r1/ines_sobral/capa.jpg)"></div>
-                            <div class="proj_ttitl">Passageiro</div>
-                            <div class="proj_ttxt">Série Fotográfica</div>
-                        </a>
-                        <a class="proj_tbox2a" href="acoissqnlembr_proj.html" target="_self">
-                            <div class="proj_timg2" style="background-image: url(css/img/r1/marta_antunes/capa.jpg)"></div>
-                            <div class="proj_ttitl">As coisas que nos fazem lembrar de nós</div>
-                            <div class="proj_ttxt">Série Fotográfica</div>
-                        </a>
-                        <a class="proj_tbox1c" href="deolinda_proj.html" target="_self">
-                            <div class="proj_timg1" style="background-image: url(css/img/r1/antonio_santiago/capa.jpg)"></div>
-                            <div class="proj_ttitl">Deolinda</div>
-                            <div class="proj_ttxt">Série Fotográfica</div>
+                        <a class="proj_tbox1b" href="whyaradattreu_proj.html" target="_self">
+                            <div class="proj_timg1" style="background-image: url(css/img/r2/r2_inesbrandao.jpg)"></div>
+                            <div class="proj_ttitl">Why are radical messages attracting young Europeans?</div>
+                            <div class="proj_ttxt">Registo Audiovisual</div>
                         </a>
                     </div>
                     <div class="proj_tfence2">
-                        <a class="proj_tbox1a"href="trsmlhrsqsdespm_proj.html" target="_self">
-                            <div class="proj_timg1" style="background-image: url(css/img/r1/carolina_couto/capa.jpg)"></div>
-                            <div class="proj_ttitl">três mulheres que se despem para ser Europa</div>
-                            <div class="proj_ttxt">Série Fotográfica</div>
+                        <a class="proj_tbox1a"href="enscmsracheg_proj.html" target="_self">
+                            <div class="proj_timg1" style="background-image: url(css/img/r2/r2_inesferreira.jpg)"></div>
+                            <div class="proj_ttitl">E nós, como seria se perdêssemos o nome à chegada?</div>
+                            <div class="proj_ttxt">Registo Audiovisual</div>
                         </a>
-                        <a class="proj_tbox1b" href="dminhald_proj.html" target="_self">
-                            <div class="proj_timg1" style="background-image: url(css/img/r1/cat_serafim/capa.jpg)"></div>
-                            <div class="proj_ttitl">Da Minha Aldeia</div>
-                            <div class="proj_ttxt">Série Fotográfica</div>
+                        <a class="proj_tbox1b" href="whchhtspch_proj.html" target="_self">
+                            <div class="proj_timg1" style="background-image: url(css/img/r2/r2_lourencostewart.jpg)"></div>
+                            <div class="proj_ttitl">Which hate speech?</div>
+                            <div class="proj_ttxt">Registo Audiovisual</div>
                         </a>
-                        <a class="proj_tbox2d" href="bancos_proj.html" target="_self">
-                            <div class="proj_timg2" style="background-image: url(css/img/r1/abel_quental/capa.jpg)"></div>
-                            <div class="proj_ttitl">Bancos</div>
-                            <div class="proj_ttxt">Série Fotográfica</div>
+                        <a class="proj_tbox2d" href="cnaeuidexst_proj.html" target="_self">
+                            <div class="proj_timg2" style="background-image: url(css/img/r2/r2_catarinacorreia.jpg)"></div>
+                            <div class="proj_ttitl">Can an European identity exist without a common language?</div>
+                            <div class="proj_ttxt">Registo Audiovisual</div>
                         </a>
-                        <a class="proj_tbox1f" href="europdef_proj.html" target="_self">
-                            <div class="proj_timg1" style="background-image: url(css/img/r1/sara_jorge/capa.jpg)"></div>
-                            <div class="proj_ttitl">europeu _ por definir</div>
-                            <div class="proj_ttxt">Série Fotográfica</div>
+                        <a class="proj_tbox1f" href="wlleuridppwv_proj.html" target="_self">
+                            <div class="proj_timg1" style="background-image: url(css/img/r2/r2_tiagomarinho.jpg)"></div>
+                            <div class="proj_ttitl">Will Europe ride the populist wave?</div>
+                            <div class="proj_ttxt">Registo Audiovisual</div>
                         </a>
-                        <a class="proj_tbox1a" href="encbrt_proj.html" target="_self">
-                            <div class="proj_timg1" style="background-image: url(css/img/r1/ines_brandao/capa.jpg)"></div>
-                            <div class="proj_ttitl">Encoberto</div>
-                            <div class="proj_ttxt">Série Fotográfica</div>
+                        <a class="proj_tbox1a" href="iseubggstthrtitsf_proj.html" target="_self">
+                            <div class="proj_timg1" style="background-image: url(css/img/r2/r2_iseuropesbiggestthreatmafaldamota.jpg)"></div>
+                            <div class="proj_ttitl">Is Europe's biggest threat... Europe itself?</div>
+                            <div class="proj_ttxt">Registo Audiovisual</div>
                         </a>
-                        <a class="proj_tbox1b" href="arqdueuro_proj.html" target="_self">
-                            <div class="proj_timg1" style="background-image: url(css/img/r1/catarina_sousa/capa.jpg)"></div>
-                            <div class="proj_ttitl">Arquivo de um europeu</div>
-                            <div class="proj_ttxt">Série Fotográfica</div>
+                        <a class="proj_tbox1b" href="eurodystllext_proj.html" target="_self">
+                            <div class="proj_timg1" style="background-image: url(css/img/r2/r2_catarinabarbosa.jpg)"></div>
+                            <div class="proj_ttitl">Europe, do you still exist?</div>
+                            <div class="proj_ttxt">Registo Audiovisual</div>
                         </a>
-                        <a class="proj_tbox2d" href="eurocuespc_proj.html" target="_self">
-                            <div class="proj_timg2" style="background-image: url(css/img/r1/mafalda_cintra/capa.jpg)"></div>
-                            <div class="proj_ttitl">Europa como um espaço comum</div>
-                            <div class="proj_ttxt">Série Fotográfica</div>
+                        <a class="proj_tbox2d" href="whtabteurpnsm_proj.html" target="_self">
+                            <div class="proj_timg2" style="background-image: url(css/img/r2/r2_guilhermesoeiro.jpg)"></div>
+                            <div class="proj_ttitl">What about Europeanism?</div>
+                            <div class="proj_ttxt">Registo Audiovisual</div>
                         </a>
-                        <a class="proj_tbox1f" href="recortes_proj.html" target="_self">
-                            <div class="proj_timg1" style="background-image: url(css/img/r1/margarida_silva/capa.jpg)"></div>
-                            <div class="proj_ttitl">Recortes</div>
-                            <div class="proj_ttxt">Série Fotográfica</div>
+                        <a class="proj_tbox1f" href="ithraftrineuro_proj.html" target="_self">
+                            <div class="proj_timg1" style="background-image: url(css/img/r2/r2_anaganilho.jpg)"></div>
+                            <div class="proj_ttitl">Is there any future in the word 'europe'?</div>
+                            <div class="proj_ttxt">Registo Audiovisual</div>
                         </a>
-                        <a class="proj_tbox1a" href="vaisofics_proj.html" target="_self">
-                            <div class="proj_timg1" style="background-image: url(css/img/r1/mafalda_mota/capa.jpg)"></div>
-                            <div class="proj_ttitl">Vais, ou ficas?</div>
-                            <div class="proj_ttxt">Série Fotográfica</div>
+                        <a class="proj_tbox1a" href="prcsmsdueunew_proj.html" target="_self">
+                            <div class="proj_timg1" style="background-image: url(css/img/r2/r2_ritanascimento.jpg)"></div>
+                            <div class="proj_ttitl">Precisaremos de uma Europa nova? Ou de uma Europa diferente?</div>
+                            <div class="proj_ttxt">Registo Audiovisual</div>
                         </a>
-                        <a class="proj_tbox1b" href="rwindff_proj.html" target="_self">
-                            <div class="proj_timg1" style="background-image: url(css/img/r1/sofia_grilo/capa.jpg)"></div>
-                            <div class="proj_ttitl">Rewind, Fast Forward</div>
-                            <div class="proj_ttxt">Série Fotográfica</div>
-                        </a>
-                        <a class="proj_tbox2d" href="smsaqulqcoms_proj.html" target="_self">
-                            <div class="proj_timg2" style="background-image: url(css/img/r1/rita_nascimento/capa.jpg)"></div>
-                            <div class="proj_ttitl">Somos aquilo que comemos</div>
-                            <div class="proj_ttxt">Série Fotográfica</div>
-                        </a>
-                        <a class="proj_tbox1f" href="dsnhaeu_proj.html" target="_self">
-                            <div class="proj_timg1" style="background-image: url(css/img/r1/jose_monteiro/capa.jpg)"></div>
-                            <div class="proj_ttitl">Desenha a Europa no Mapa</div>
-                            <div class="proj_ttxt">Série Fotográfica</div>
+                        <a class="proj_tbox2a" href="ahistvoltsarep_proj.html" target="_self">
+                            <div class="proj_timg2" style="background-image: url(css/img/r2/r2_catarinaserafim.jpg)"></div>
+                            <div class="proj_ttitl">A história voltar-se-à a repetir?</div>
+                            <div class="proj_ttxt">Registo Audiovisual</div>
                         </a>
                     </div>
+                </div>
+                <div id="st4" class="mprojtxtb">
+                    <div class="mprojtitl">Europa, sem destino</div>
+                    <div class="mprojstxt">Diciplina: Design de Comunicação V (O2)</div>
                 </div>
             </div>
         </div>
