--- a/rodrsilva.html
+++ b/rodrsilva.html
@@ -89,6 +89,11 @@
                             <div class="profl_ttitl">Poética Vermelha</div>
                             <div class="profl_ttxt">Série Fotográfica</div>
                         </a>
+                        <a class="profl_tbox2d" href="qulsomlisb_proj.html" target="_self">
+                        <div class="profl_timg2" style="background-image: url(css/img/r2/r2_rodrigosilva.jpg)"></div>
+                            <div class="profl_ttitl">Qual é o som de Lisboa?</div>
+                            <div class="profl_ttxt">Registo Audiovisual</div>
+                        </a>
                     </div>
                 </div>
         </div>
