--- a/tgmarinho.html
+++ b/tgmarinho.html
@@ -78,7 +78,7 @@
                             <div class="profl_ttxt">Cartaz Desdobrável</div>
                         </a>
                         <a class="profl_tbox1b" href="triptic_proj.html" target="_self">
-                        <div class="profl_timg1" style="background-image: url(css/img/psqv/1.comeinsideroom101/13.intala%C3%A7aoaudiovisual.mafaldapedrobeatriztiago.jpg)"></div>
+                        <div class="profl_timg1" style="background-image: url(css/img/psqv/1.comeinsideroom101/13.intalacaoaudiovisualmafaldapedrobeatriztiago.jpg)"></div>
                             <div class="profl_ttitl">Tríptico</div>
                             <div class="profl_ttxt">Instalação Audiovisual</div>
                         </a>
@@ -93,6 +93,13 @@
                         <div class="profl_timg2" style="background-image: url(css/img/r1/tiago_marinho/capa.jpg)"></div>
                             <div class="profl_ttitl">Europeu</div>
                             <div class="profl_ttxt">Série Fotográfica</div>
+                        </a>
+                    </div>
+                <div class="profl_tfence1">
+                        <a class="profl_tbox1d" href="wlleuridppwv_proj.html" target="_self">
+                        <div class="profl_timg1" style="background-image: url(css/img/r2/r2_tiagomarinho.jpg)"></div>
+                            <div class="profl_ttitl">Will Europe ride the populist wave?</div>
+                            <div class="profl_ttxt">Registo Audiovisual</div>
                         </a>
                     </div>
                 </div>
