--- a/beasapata.html
+++ b/beasapata.html
@@ -85,7 +85,7 @@
                     </div>
                     <div class="profl_tfence1">
                         <a class="profl_tbox2c" href="triptic_proj.html" target="_self">
-                        <div class="profl_timg2" style="background-image: url(css/img/psqv/1.comeinsideroom101/13.intala%C3%A7aoaudiovisual.mafaldapedrobeatriztiago.jpg)"></div>
+                        <div class="profl_timg2" style="background-image: url(css/img/psqv/1.comeinsideroom101/13.intalacaoaudiovisualmafaldapedrobeatriztiago.jpg)"></div>
                             <div class="profl_ttitl">Tríptico</div>
                             <div class="profl_ttxt">Instalação Audiovisual</div>
                         </a>
@@ -93,6 +93,13 @@
                         <div class="profl_timg2" style="background-image: url(css/img/dlivroalivro/ulivropadl/beatriz_sapata/capa.jpg)"></div>
                             <div class="profl_ttitl">A blank page for the digital</div>
                             <div class="profl_ttxt">Livro de Autor</div>
+                        </a>
+                    </div>
+                <div class="profl_tfence1">
+                        <a class="profl_tbox1c" href="smdemoqrest_proj.html" target="_self">
+                        <div class="profl_timg1" style="background-image: url(css/img/r2/r2_beatrizsapata.jpg)"></div>
+                            <div class="profl_ttitl">Sem Democracia, o que resta da Europa como a conhecemos?</div>
+                            <div class="profl_ttxt">Registo Audiovisual</div>
                         </a>
                     </div>
                 </div>
