--- a/insbrandao.html
+++ b/insbrandao.html
@@ -77,11 +77,11 @@
                             <div class="profl_ttitl">Encoberto</div>
                             <div class="profl_ttxt">Série Fotográfica</div>
                         </a>
-                        <div class="profl_tbox1b">
-                        <div class="profl_timg1" style="background-image: url(css/img/patrn2.jpg)"></div>
-                            <div class="profl_ttitl">nome do projecto</div>
-                            <div class="profl_ttxt">legenda</div>
-                        </div>
+                        <a class="profl_tbox1b" href="whyaradattreu_proj.html" target="_self">
+                        <div class="profl_timg1" style="background-image: url(css/img/r2/r2_inesbrandao.jpg)"></div>
+                            <div class="profl_ttitl">Why are radical messages attracting young Europeans?</div>
+                            <div class="profl_ttxt">Registo Audiovisual</div>
+                        </a>
                     </div>
                     <div class="profl_tfence1">
                         <div class="profl_tbox2c">
