--- a/insferreira.html
+++ b/insferreira.html
@@ -95,6 +95,13 @@
                             <div class="profl_ttxt">Livro de Autor</div>
                         </a>
                     </div>
+                <div class="profl_tfence1">
+                        <a class="profl_tbox1d" href="enscmsracheg_proj.html" target="_self">
+                        <div class="profl_timg1" style="background-image: url(css/img/r2/r2_inesferreira.jpg)"></div>
+                            <div class="profl_ttitl">E nós, como seria se perdêssemos o nome à chegada?</div>
+                            <div class="profl_ttxt">Registo Audiovisual</div>
+                        </a>
+                    </div>
                 </div>
         </div>
         <div id="foot">
