--- a/madalmeida.html
+++ b/madalmeida.html
@@ -84,11 +84,11 @@
                         </a>
                     </div>
                     <div class="profl_tfence1">
-                        <div class="profl_tbox2c">
-                        <div class="profl_timg2" style="background-image: url(css/img/patrn1.jpg)"></div>
-                            <div class="profl_ttitl">nome do projecto</div>
-                            <div class="profl_ttxt">legenda</div>
-                        </div>
+                        <a class="profl_tbox2c" href="estmscond_proj.html" target="_self">
+                        <div class="profl_timg2" style="background-image: url(css/img/r2/r2_madalenaalmeida.jpg)"></div>
+                            <div class="profl_ttitl">Estamos condenados a repetirmo-nos?</div>
+                            <div class="profl_ttxt">Registo Audiovisual</div>
+                        </a>
                     </div>
                 </div>
         </div>
