--- a/mafldmota.html
+++ b/mafldmota.html
@@ -78,7 +78,7 @@
                             <div class="profl_ttxt">Cartazes</div>
                         </a>
                         <a class="profl_tbox1b" href="triptic_proj.html" target="_self">
-                        <div class="profl_timg1" style="background-image: url(css/img/psqv/1.comeinsideroom101/13.intala%C3%A7aoaudiovisual.mafaldapedrobeatriztiago.jpg)"></div>
+                        <div class="profl_timg1" style="background-image: url(css/img/psqv/1.comeinsideroom101/13.intalacaoaudiovisualmafaldapedrobeatriztiago.jpg)"></div>
                             <div class="profl_ttitl">Tríptico</div>
                             <div class="profl_ttxt">Instalação Audiovisual</div>
                         </a>
@@ -94,10 +94,17 @@
                             <div class="profl_ttitl">O Visconde cortado ao meio<br><p style="font-size:80%;margin-bottom:0;">de Italo Calvino</div>
                             <div class="profl_ttxt">Livro</div>
                         </a>
-                        <a class="profl_tbox1a" href="vaisofics_proj.html" target="_self">
+                </div>
+                <div class="profl_tfence1">
+                    <a class="profl_tbox1d" href="vaisofics_proj.html" target="_self">
                         <div class="profl_timg1" style="background-image: url(css/img/r1/mafalda_mota/capa.jpg)"></div>
                             <div class="profl_ttitl">Vais, ou ficas?</div>
                             <div class="profl_ttxt">Série Fotográfica</div>
+                        </a>
+                    <a class="profl_tbox1a" href="iseubggstthrtitsf_proj.html" target="_self">
+                        <div class="profl_timg1" style="background-image: url(css/img/r2/r2_iseuropesbiggestthreatmafaldamota.jpg)"></div>
+                            <div class="profl_ttitl">Is Europe's biggest threat... Europe itself?</div>
+                            <div class="profl_ttxt">Registo Audiovisual</div>
                         </a>
                 </div>
                 </div>
