--- a/qulsomlisb_proj.html
+++ b/qulsomlisb_proj.html
@@ -5,9 +5,37 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="css/home.css">
-        <link rel="stylesheet" href="css/profl.css">
-        <title>Lourenço Stewart | sem destino a</title>
+        <link rel="stylesheet" href="css/sprojs.css">
+        <title>Qual é o som de Lisboa? | sem destino a</title>
         <link rel="icon" href="css/img/sda_icon.png" type="image/x-icon">
+        <style>
+            .slideshow-container {
+                display: table;
+	position: relative;
+	padding-bottom: 56.25%;
+	padding-top: 25px;
+	height: 0;
+                overflow: hidden;
+}
+.slideshow-container iframe {
+    display: flex;
+    display: -webkit-flex;
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+}
+            .sproj_intro{
+    column-count: 1;
+    -webkit-column-count: 1;
+}
+            @media only screen and (max-height: 420px){
+                .slideshow-container {
+	padding-bottom: 50%;
+}
+            }
+        </style>
     </head>
     <body>
         <script>
@@ -53,44 +81,23 @@
                 </div>
             </div>
         </div>
-        <div id="proflmain">
-            <div class="profl_sec">
-                <div class="profl_titl">Lourenço Stewart</div>
-                <div class="profl_links"><a class="profl_link" href="mailto:lstewart.zodyac@gmail.com" target="_blank">lstewart.zodyac@gmail.com</a><br><a class="profl_link" href="#" onclick='window.open("https://www.behance.net/l_stewart");return false;'>behance.net/l_stewart</a><br><a class="profl_link" href="#" onclick='window.open("https://www.instagram.com/l_stewartt/");return false;'>instagram.com/l_stewartt/</a></div>
+        <div id="sprojmain">
+            <div class="sproj_titl">Qual é o som de Lisboa?</div>
+            <div class="sproj_hold">
+                <div class="sproj_stitl">Projecto de Design de Comunicação V</div>
+                <div class="sproj_lhold"><a class="sproj_links" href="proj.html#desti3" target="_self">somos</a> > <a class="sproj_links" href="proj.html#st3" target="_self">Europa era uma boa ideia, mas…</a></div>
             </div>
-            <div class="profl_tplaygrnd1">
-                    <div class="profl_tfence1">
-                        <a class="profl_tbox1a" href="bein_proj.html" target="_self">
-                        <div class="profl_timg1" style="background-image: url(css/img/totido/wec/3.bein/capa.jpg)"></div>
-                            <div class="profl_ttitl">BE-IN</div>
-                            <div class="profl_ttxt">Publicação Periódica</div>
-                        </a>
-                        <a class="profl_tbox1a" href="azul_proj.html" target="_self">
-                        <div class="profl_timg1" style="background-image: url(css/img/psqv/1.comeinsideroom101/5.azul.leonorlourenco.jpg)"></div>
-                            <div class="profl_ttitl">Azul</div>
-                            <div class="profl_ttxt">Video Fotográfico</div>
-                        </a>
-                    </div>
-                    <div class="profl_tfence1">
-                        <a class="profl_tbox2b" href="id_proj.html" target="_self">
-                        <div class="profl_timg2" style="background-image: url(css/img/psqv/1.comeinsideroom101/11.instalacaoid.leonorcarolinalouranco.jpg)"></div>
-                            <div class="profl_ttitl">ID</div>
-                            <div class="profl_ttxt">Instalação Audiovisual</div>
-                        </a>
-                        <a class="profl_tbox1b" href="whchhtspch_proj.html" target="_self">
-                        <div class="profl_timg1" style="background-image: url(css/img/r2/r2_lourencostewart.jpg)"></div>
-                            <div class="profl_ttitl">Which hate speech?</div>
-                            <div class="profl_ttxt">Registo Audiovisual</div>
-                        </a>
-                    </div>
-                    <div class="profl_tfence1">
-                        <div class="profl_tbox2c">
-                        <div class="profl_timg2" style="background-image: url(css/img/patrn1.jpg)"></div>
-                            <div class="profl_ttitl">nome do projecto</div>
-                            <div class="profl_ttxt">legenda</div>
-                        </div>
-                    </div>
+            <div class="sproj_hold">
+                <div class="sproj_plhold">
+                    <a class="sproj_plinks" href="rodrsilva.html" target="_self">Rodrigo Silva</a>
                 </div>
+                <div class="sproj_intro">
+                    <div class="sproj_txt"><p>No dorso de Lisboa, onde o Tejo e o Oceano se encontram, as ondas colapsam no pavimento de cimento que separa a metrópole das águas, acariciando a costa apenas por momentos. Namoram o betão em gestos pendulares, este que responde trovando uma velha canção que aqui nasceu e que as ondas repetem de regresso ao mar. A erosão faz soltar pedaços do solo que a corrente arrasta consigo, transportando com eles a cidade até terras exóticas e familiares. Lisboa, ainda no mesmo lugar, perde algures no horizonte a visão dos seus fragmentos, interrompendo o seu olhar para ver o quebrar de uma nova onda na costa. A espuma volta a tocar o pavimento, trazendo em si outras paisagens, essas que a cidade recorda embora nunca tenha visitado. A sussurrante voz lírica das ondas deixa para trás uma nova melodia, embrenhada nos objectos que se revelam no recuar das águas. Cantam timidamente sobre o betão, na esperança de aqui poderem atracar, trocando versos com a metrópole. Lisboa dá lugar a uma nova sonoridade, esta que nasce na costa e se renova a cada onda, espelhando na água a sua própria identidade, complexa e fragmentada.</p></div>
+                </div>
+            </div>
+            <div class="slideshow-container">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/eoUlLb_0Kiw?rel=0" frameborder="0" allowfullscreen></iframe>
+            </div>
         </div>
         <div id="foot">
             <div id="footword">
