--- a/whrtdiver_proj.html
+++ b/whrtdiver_proj.html
@@ -5,9 +5,37 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="css/home.css">
-        <link rel="stylesheet" href="css/profl.css">
-        <title>Lourenço Stewart | sem destino a</title>
+        <link rel="stylesheet" href="css/sprojs.css">
+        <title>Where is the diversity? | sem destino a</title>
         <link rel="icon" href="css/img/sda_icon.png" type="image/x-icon">
+        <style>
+            .slideshow-container {
+                display: table;
+	position: relative;
+	padding-bottom: 56.25%;
+	padding-top: 25px;
+	height: 0;
+                overflow: hidden;
+}
+.slideshow-container iframe {
+    display: flex;
+    display: -webkit-flex;
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+}
+            .sproj_intro{
+    column-count: 1;
+    -webkit-column-count: 1;
+}
+            @media only screen and (max-height: 420px){
+                .slideshow-container {
+	padding-bottom: 50%;
+}
+            }
+        </style>
     </head>
     <body>
         <script>
@@ -53,44 +81,23 @@
                 </div>
             </div>
         </div>
-        <div id="proflmain">
-            <div class="profl_sec">
-                <div class="profl_titl">Lourenço Stewart</div>
-                <div class="profl_links"><a class="profl_link" href="mailto:lstewart.zodyac@gmail.com" target="_blank">lstewart.zodyac@gmail.com</a><br><a class="profl_link" href="#" onclick='window.open("https://www.behance.net/l_stewart");return false;'>behance.net/l_stewart</a><br><a class="profl_link" href="#" onclick='window.open("https://www.instagram.com/l_stewartt/");return false;'>instagram.com/l_stewartt/</a></div>
+        <div id="sprojmain">
+            <div class="sproj_titl">Where is the diversity?</div>
+            <div class="sproj_hold">
+                <div class="sproj_stitl">Projecto de Design de Comunicação V</div>
+                <div class="sproj_lhold"><a class="sproj_links" href="proj.html#desti3" target="_self">somos</a> > <a class="sproj_links" href="proj.html#st3" target="_self">Europa era uma boa ideia, mas…</a></div>
             </div>
-            <div class="profl_tplaygrnd1">
-                    <div class="profl_tfence1">
-                        <a class="profl_tbox1a" href="bein_proj.html" target="_self">
-                        <div class="profl_timg1" style="background-image: url(css/img/totido/wec/3.bein/capa.jpg)"></div>
-                            <div class="profl_ttitl">BE-IN</div>
-                            <div class="profl_ttxt">Publicação Periódica</div>
-                        </a>
-                        <a class="profl_tbox1a" href="azul_proj.html" target="_self">
-                        <div class="profl_timg1" style="background-image: url(css/img/psqv/1.comeinsideroom101/5.azul.leonorlourenco.jpg)"></div>
-                            <div class="profl_ttitl">Azul</div>
-                            <div class="profl_ttxt">Video Fotográfico</div>
-                        </a>
-                    </div>
-                    <div class="profl_tfence1">
-                        <a class="profl_tbox2b" href="id_proj.html" target="_self">
-                        <div class="profl_timg2" style="background-image: url(css/img/psqv/1.comeinsideroom101/11.instalacaoid.leonorcarolinalouranco.jpg)"></div>
-                            <div class="profl_ttitl">ID</div>
-                            <div class="profl_ttxt">Instalação Audiovisual</div>
-                        </a>
-                        <a class="profl_tbox1b" href="whchhtspch_proj.html" target="_self">
-                        <div class="profl_timg1" style="background-image: url(css/img/r2/r2_lourencostewart.jpg)"></div>
-                            <div class="profl_ttitl">Which hate speech?</div>
-                            <div class="profl_ttxt">Registo Audiovisual</div>
-                        </a>
-                    </div>
-                    <div class="profl_tfence1">
-                        <div class="profl_tbox2c">
-                        <div class="profl_timg2" style="background-image: url(css/img/patrn1.jpg)"></div>
-                            <div class="profl_ttitl">nome do projecto</div>
-                            <div class="profl_ttxt">legenda</div>
-                        </div>
-                    </div>
+            <div class="sproj_hold">
+                <div class="sproj_plhold">
+                    <a class="sproj_plinks" href="joalourenco.html" target="_self">Joana Lourenço</a>
                 </div>
+                <div class="sproj_intro">
+                    <div class="sproj_txt"><p>A globalização tem os seus pontos positivos e negativos.</p><p>No trabalho “Europe After Hours” temos vindo a abordar esta questão, neste caso, relacionada com as culturas locais. A Europa é conhecida pela sua diversidade cultural e pelo seu multilinguismo. É importante preservar esta diversidade e abertura a novas culturas que entram no continente e, ao mesmo tempo não esquecer a história enquanto memória colectiva e marca na identidade.</p><p>A homogeneização de culturas, costumes, locais.... é um factor que faz parte da globalização e do qual não se deve perder o controlo. A identidade dos locais deve permanecer e ser construída nesse sentido, ou seja, não reduzi-la ao mesmo em tudo. Esses lugares precisam de distinção e reforço da sua genuinidade.</p><p>Neste vídeo transporto a questão para a noite europeia. Onde está a diferença entre uma noite lisboeta e uma noite parisiense?</p></div>
+                </div>
+            </div>
+            <div class="slideshow-container">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/SalM47xsWEE?rel=0" frameborder="0" allowfullscreen></iframe>
+            </div>
         </div>
         <div id="foot">
             <div id="footword">
